# Jobs_Api/app.js
@@ -12,10 +12,10 @@ const app = express()
 const swaggerUI = require('swagger-ui-express')
 const YAML = require('yamljs')
 const swaggerDocument = YAML.load('./swagger.yaml')
-    // connectDB
+// connectDB
 const connectDB = require('./db/connect')
 const authenticateUser = require('./middlewares/authentication')
-    //routers
+//routers
 const authRouter = require('./routes/auth')
 const jobsRouter = require('./routes/jobs')
 
@@ -29,12 +29,13 @@ app.use(express.json())
 app.use(helmet())
 app.use(cors())
 app.use(xss())
-    //extra packages
+app.set('view engine', 'ejs');
+//extra packages
 app.get('/', (req, res) => {
-    res.send('<h1> jobs API</h1><a href="/api-docs">Documentation</a>')
+    res.render('index')
 })
 app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerDocument))
-    //routes
+//routes
 app.use('/api/v1/auth', authRouter)
 app.use('/api/v1/jobs', authenticateUser, jobsRouter)
 
@@ -42,8 +43,8 @@ app.use(notFoundMiddleWare);
 app.use(errorHandlerMiddleWare);
 //port
 const port = process.env.PORT || 3000
-    // app runnning
-const start = async() => {
+// app runnning
+const start = async () => {
     try {
         await connectDB(process.env.MONGO_URI)
         app.listen(port, console.log(`Server is listening on port http://localhost:${port}`))
